--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-resolver-dns-native-macos</artifactId>
+				<version>4.1.68.Final</version>
+				<classifier>osx-aarch_64</classifier>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
